src/components/vcnavbar.module.css
:root {
  --menu-font-size: 14px;
  --menu-button-width: 160px;
  --menu-button-height: 44px;
  --menu-arrow-left: 22px;
  --menu-arrow-left-ex: 31px;
  --menu-arrowline-left: -7px;
  --menu-text-left: 2px;
  --menu-button-marginsl: 2px;
  --menu-button-marginsr: 2px;
  --menu-button-marginsl-active: 2px;
  --menu-button-marginsr-active: 16px;
}

/* Basic Styling */
.topnav {
  height: 65px;
  margin-bottom: 10px;
  clear: both;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: all 0.8s ease-in-out;
}

/* Style the links inside the navigation bar */
.navlink, .active {
  text-decoration: none;
  font-size: var(--menu-font-size);
  display: flex;
  justify-content: center;
  align-items: center;
  height: var(--menu-button-height);
}

.navlink {
  width: 50px;
  padding: 0px;
  z-index: 10;
  transition: all 0.4s ease-in-out, border-top 0.3s ease-in-out, border-bottom 0.3s ease-in-out,border-left 0.3s ease-in-out;
  margin-left: var(--menu-button-marginsl);
  margin-right: var(--menu-button-marginsr);
}

.active {
  width: var(--menu-button-width);
  border-top: 3px solid #3232e6;
  border-bottom: 3px solid #3232e6;
  margin-left: var(--menu-button-marginsl-active);
  margin-right: var(--menu-button-marginsr-active);
  z-index: 100;
  transition: all 1s ease-in-out;
}

/* Style the first button to be the starter button */
#ex.navlink .arrowsvg {
  display: none;
  visibility: hidden;
}

#ex.navlink .startsvg {
  display: initial;
  visibility: visible;
}

#ex.navlink .activelinesvg {
  display: none;
  visibility: hidden;
}

#ex.active {
  border-left: 3px solid #3232e6;
}

#ex.active .arrowsvg {
  display: initial;
  visibility: visible;
}

#ex.active .startsvg {
  display: none;
  visibility: hidden;
}

#ex.active .startsvg {
  display: none;
  visibility: hidden;
}

/* Style the text in link */
.navlink .linktext {
  display: none;
  transition: all 1s ease-in-out;
  text-align: center;
}

.navlink .EFlinktext {
  display: none;
  transition: all 1s ease-in-out;
  text-align: center;
}

/* Style the SVG and SVG elements inside the link */
.navlink .arrowsvg, .navlink .startsvg {
  width: 50px;
  height: 50px;
  margin: 0px 0px;
  padding: 0px;
  transition: all 0.5s ease-in-out;
}

.active .arrowsvg, .active .startsvg {
  position: relative;
  margin: 0px;
  width: 50px;
  height: 50px;
  top: 0px;
  left: var(--menu-arrow-left);
  z-index: 100;
  transition: all 1s ease-in-out;
}

.startsvg {
  display: none;
  visibility: hidden;
}
.arrowsvg {
  display: initial;
  margin: 0px;
}
.activelinesvg {
  display: none;
  visibility: hidden;
  position: relative;
  width: 15px;
  height: 50px;
  top: 0px;
  left: var(--menu-arrowline-left);
  z-index: 100;
  stroke: #ddd;
  margin: 0px;
}

.navlink polygon {
  stroke: #333;
  transition: fill 0.2s ease-in-out, stroke 0.2s ease-in-out;
}

.navlink polyline {
  transition: fill 0.2s ease-in-out, stroke 0.2s ease-in-out;
}

.navlink text {
  fill: #ddd;
  stroke: #ddd;
}

/* Style text in link */
.active .linktext {
  position: relative;
  width: 90px;
  max-width: 80px;
  overflow-wrap: normal;
  left: var(--menu-text-left);
  color: #313131;
  text-align: center;
  word-wrap: normal;
  z-index: 100;
  display: inline;
  float: left;
  transition: all 1s ease-in-out;
}

.active .EFlinktext {
  position: relative;
  width: 90px;
  max-width: 80px;
  overflow-wrap: normal;
  left: var(--menu-text-left);
  color: #313131;
  text-align: left;
  z-index: 100;
  float: left;
  transition: all 1s ease-in-out;
  text-align: center;
}

#ex.active .activelinesvg {
  display: none;
  visibility: hidden;
}

#ex.active .arrowsvg {
  left: var(--menu-arrow-left-ex);
}

/* Change links on hover */
.navlink:hover {
  width: var(--menu-button-width);
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left: var(--menu-button-marginsl);
  margin-right: var(--menu-button-marginsr-active);
  height: var(--menu-button-height);
  z-index: 100;
  border-top: 3px solid #ddd;
  border-bottom: 3px solid #ddd;
}
#ex.navlink:hover {
  border-left: 3px solid #ddd;
}

#ex.navlink:hover .startsvg {
  display: none;
  visibility: hidden;
}
#ex.navlink:hover .arrowsvg{
  display: initial;
  visibility: visible;
  left: 31px;
}
#ex.navlink:hover .activelinesvg{
  display: none;
  visibility: hidden;
}

.navlink:hover .linktext {
  color: black;
  display: inline;
  position: relative;
  width: 90px;
  max-width: 80px;
  overflow-wrap: normal;
  left: var(--menu-text-left);
  color: #313131;
  text-align: center;
  word-wrap: normal;
  z-index: 100;
}

.navlink:hover .EFlinktext {
  color: black;
  display: inline;
  position: relative;
  width: 90px;
  max-width: 80px;
  overflow-wrap: normal;
  left: var(--menu-text-left);
  color: #313131;
  text-align: center;
  z-index: 100;
  float: left;
}

.navlink:hover .arrowsvg, .navlink:hover .startsvg {
  position: relative;
  left: var(--menu-arrow-left);
  width: 50px;
  height: 50px;
  z-index: 100;
}

.navlink:hover polygon {
  fill: #ddd;
  stroke: #ddd;
}

.navlink:hover .activelinesvg {
  fill: transparent;
  stroke: #ddd;
  display: initial;
  visibility: visible;
  position: relative;
  left: var(--menu-arrowline-left);
}

.navlink:hover text{
  fill: #333;
  stroke: #333;
  color: #333;
}

/* Add a color to the active/current link */
.active polygon, .navlink polygon:active{
  fill: #3232e6;
  stroke: #3232e6;
}

.active .activelinesvg {
  fill: transparent;
  stroke: #3232e6;
  display: initial;
  visibility: visible;
  position: relative;
  left: var(--menu-arrowline-left);
}

.active text, .navlink text:active{
  fill: #ddd;
  stroke: #ddd;
}

.navlink:focus{
  fill: #ddd;
  stroke: #ddd;
  color: #ddd;
}

/* For large screens */
@media all and (min-width: 1445px) { 
  .navlink{
    width: var(--menu-button-width);
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: var(--menu-button-marginsl);
    margin-right: var(--menu-button-marginsr-active);
    z-index: 100;
    border-top: 3px solid #333;
    border-bottom: 3px solid #333;
  }
  #ex.navlink {
    border-left: 3px solid #333;
  }
  
  #ex.navlink .startsvg {
    display: none;
    visibility: hidden;
  }
  #ex.navlink .arrowsvg{
    display: initial;
    visibility: visible;
  }
  #ex.navlink .activelinesvg{
    display: none;
    visibility: hidden;
  }
  
  .navlink .linktext {
    display: inline;
    position: relative;
    width: 90px;
    max-width: 80px;
    overflow-wrap: normal;
    left: var(--menu-text-left);
    color: #313131;
    text-align: center;
    word-wrap: normal;
    z-index: 100;
    float: left;
  }
  
  .navlink .EFlinktext {
    color: black;
    display: inline;
    position: relative;
    width: 90px;
    max-width: 80px;
    overflow-wrap: normal;
    left: var(--menu-text-left);
    color: #313131;
    text-align: center;
    z-index: 100;
    float: left;
  }
  
  .navlink .arrowsvg {
    position: relative;
    left: var(--menu-arrow-left);
    width: 50px;
    height: 50px;
    z-index: 100;
  }

  #ex.navlink .arrowsvg {
    left: var( --menu-arrow-left-ex);
  }

  .navlink .activelinesvg {
    fill: transparent;
    stroke: #333;
    display: initial;
    visibility: visible;
    position: relative;
    left: var(--menu-arrowline-left);
  }
  
  .navlink text{
    fill: #ddd;
    stroke: #ddd;
    color: #ddd;
  }
}

/* For small screens */
@media all and (max-width: 540px) { 
  .active {
    width: 50px;
    padding: 0px;
    border: none;
    margin-left: var(--menu-button-marginsl);
    margin-right: var(--menu-button-marginsr);
  }
  .active .activelinesvg {
    display: none;
    visibility: hidden;
  }
  .active .linktext, .active .EFlinktext{
    display: none;
    visibility: hidden;
  }
  .active .arrowsvg, #ex.active .startsvg{
    margin: 0px 0px;
    padding: 0px;
    left: 0;
    display: initial;
    visibility: visible;
  }
  #ex.active {
    border-left: none;
  }
  #ex.active .arrowsvg {
    display: none;
    visibility: hidden;
  }
  /* Change links on hover */
  .navlink:hover {
    width: 50px;
    padding: 0px;
    border: none;
    margin-left: var(--menu-button-marginsl);
    margin-right: var(--menu-button-marginsr);
  }
  #ex.navlink:hover {
    border-left: none;
  }
  #ex.navlink:hover .startsvg {
    display: none;
    visibility: hidden;
  }
  #ex.navlink:hover .arrowsvg{
    display: initial;
    visibility: visible;
    left: 31px;
  }
  #ex.navlink:hover .activelinesvg{
    display: none;
    visibility: hidden;
  }
  .navlink:hover .linktext {
    display: none;
    visibility: hidden;
  }
  .navlink:hover .EFlinktext {
    display: none;
    visibility: hidden;
  }
  .navlink:hover .arrowsvg, .navlink:hover .startsvg {
    position: relative;
    margin: 0px 0px;
    padding: 0px;
    left: 0;
    width: 50px;
    height: 50px;
    z-index: 100;
  }
  .navlink:hover polygon {
    fill: #ddd;
    stroke: #ddd;
  }
  .navlink:hover .activelinesvg {
    display: none;
    visibility: hidden;
  }
  .navlink:hover text{
    fill: #333;
    stroke: #333;
    color: #333;
  } 
}

